Add Vehicle service and repository layers