@@ -3,21 +3,20 @@ package com.vehicle.onboard.service.impl;
 import com.vehicle.onboard.dto.VehicleRequestDto;
 import com.vehicle.onboard.dto.VehicleResponseDto;
 import com.vehicle.onboard.entity.Vehicle;
+import com.vehicle.onboard.exception.DuplicateResourceException;
 import com.vehicle.onboard.exception.ResourceNotFoundException;
 import com.vehicle.onboard.mapper.VehicleMapper;
 import com.vehicle.onboard.repository.VehicleRepository;
 import com.vehicle.onboard.service.VehicleService;
-import com.vehicle.onboard.service.VehicleValidationService;
+import com.vehicle.onboard.service.validation.VehicleValidationService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class VehicleServiceImpl implements VehicleService {
 
     private final VehicleRepository vehicleRepository;
@@ -25,64 +24,54 @@ public class VehicleServiceImpl implements VehicleService {
     private final VehicleValidationService validationService;
 
     @Override
+    @Transactional
     public VehicleResponseDto createVehicle(VehicleRequestDto requestDto) {
-        // Validate for duplicates
-        validationService.validateVehicleForDuplicates(
-            requestDto.getRegistrationNumber(),
-            requestDto.getVin(),
-            null
-        );
-
+        validationService.validateNewVehicle(requestDto);
+        
         Vehicle vehicle = vehicleMapper.toEntity(requestDto);
-        vehicle.setActive(true);
         vehicle = vehicleRepository.save(vehicle);
+        
         return vehicleMapper.toDto(vehicle);
     }
 
     @Override
     @Transactional(readOnly = true)
     public VehicleResponseDto getVehicleById(Long id) {
-        Vehicle vehicle = findActiveVehicleById(id);
+        Vehicle vehicle = vehicleRepository.findByIdAndActiveTrue(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found with id: " + id));
+        
         return vehicleMapper.toDto(vehicle);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<VehicleResponseDto> getAllActiveVehicles() {
-        return vehicleRepository.findByActiveTrue()
-                .stream()
+        return vehicleRepository.findByActiveTrue().stream()
                 .map(vehicleMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional
     public VehicleResponseDto updateVehicle(Long id, VehicleRequestDto requestDto) {
-        Vehicle existingVehicle = findActiveVehicleById(id);
+        Vehicle vehicle = vehicleRepository.findByIdAndActiveTrue(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found with id: " + id));
         
-        // Validate for duplicates, excluding the current vehicle
-        validationService.validateVehicleForDuplicates(
-            requestDto.getRegistrationNumber(),
-            requestDto.getVin(),
-            id
-        );
-
-        vehicleMapper.updateEntityFromDto(requestDto, existingVehicle);
-        existingVehicle.setActive(true);
-        existingVehicle = vehicleRepository.save(existingVehicle);
-        return vehicleMapper.toDto(existingVehicle);
+        validationService.validateVehicleUpdate(id, requestDto);
+        
+        vehicleMapper.updateEntityFromDto(requestDto, vehicle);
+        vehicle = vehicleRepository.save(vehicle);
+        
+        return vehicleMapper.toDto(vehicle);
     }
 
     @Override
+    @Transactional
     public void deactivateVehicle(Long id) {
-        Vehicle vehicle = findActiveVehicleById(id);
+        Vehicle vehicle = vehicleRepository.findByIdAndActiveTrue(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found with id: " + id));
+        
         vehicle.setActive(false);
         vehicleRepository.save(vehicle);
-    }
-
-    private Vehicle findActiveVehicleById(Long id) {
-        return vehicleRepository.findByIdAndActiveTrue(id)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                    String.format("No active vehicle found with id: %d", id))
-                );
     }
 }
